@@ -67,52 +67,6 @@ class DashboardUsersAuthyController extends DashboardBaseController {
                 $co = new Config();
                 $co->setPackageObject($pkg);
 
-                //should we switch to/from default system?
-                $post_default_auth = ($this->post("AUTH_TYPE") == "0" ? true : false);
-                $config_default_auth = ($co->get('authy_type') == "0" ? true : false );
-
-                //yeah, we do
-                //we need to take over the login singlepage
-                if( $post_default_auth != $config_default_auth ) {
-                    $db = Loader::db();
-
-                    //should we take over the single page?
-                    if( $post_default_auth ) {
-
-                        $args = array(
-                            '0', //concrete's default
-                            Page::getByPath("/login")->getCollectionID()
-                        );
-
-                        $original_name = "login.php.bak";
-                        $modified_name = "login.php";
-
-                    } else {
-
-                        $args = array(
-                            $pkg->getPackageID(), //package ID
-                            Page::getByPath("/login")->getCollectionID()
-                        );
-
-                        $original_name = "login.php";
-                        $modified_name = "login.php.bak";
-
-                    }
-
-                    /*
-                     * Concrete5 has a flaw in the way it loads file
-                     * Which causes to load \concrete\single_pages\login.php instead f the file in package
-                     * So we are renaming it so that the loader will definitely ignore it
-                     * This is not good practice, but then again, neither is the existing implementation
-                     */
-                    $path = getcwd() . DIRECTORY_SEPARATOR . "concrete" . DIRECTORY_SEPARATOR . "single_pages" . DIRECTORY_SEPARATOR;
-                    rename( $path . $original_name, $path . $modified_name );
-
-                    //update a core singlepage
-                    $db->query("update Pages set pkgID = ? where cID = ?", $args );
-                }
-
-
                 //save the config
                 $co->save('authy_type', $this->post("AUTH_TYPE") );
                 $co->save('authy_server_production', $this->post("AUTHY_SERVER") );
